
2006-01-26  Miguel Guzman  <aglanor@gmail.com>
    * src/services/sound/SoundService.*:
        * cleaned up playTestSound() code and command call
        * added playTalk() to play a sound when entities talk
    * src/components/ogre/EmberEntity.cpp:
        * invoke SoundService->playTalk() at onTalk()
    * src/components/ogre/Avatar.cpp:
        * added some code to handle an avatar source (non-functional)
    * src/components/ogre/EmberOgre.cpp
        * print an error if /dev/dsp can't be opened, on non-win32 systems

2006-01-25  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/EntityCEGUITexture.cpp: 
        * added more logging
        * make sure the texture created is in multiples of 2
    *src/components/ogre/widgets/ServerWidget.*, src/components/ogre/widgets/ServerWidget.xml: added a preview of the character to be created

2006-01-25  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/Makefile.am, src/components/ogre/scripting/bindings/lua/Makefile.am, src/components/ogre/scripting/bindings/lua/helpers/Makefile.am, src/components/ogre/scripting/bindings/lua/ogre/Makefile.am, src/framework/bindings/lua/Makefile.am, src/framework/bindings/lua/eris/Makefile.am, src/services/bindings/lua/Makefile.am: build the libraries as noinstall
    * src/components/ogre/cegui/datafiles/imagesets/TaharezLook.imageset, src/components/ogre/cegui/datafiles/imagesets/WindowsLook.imageset: update for 0.4.1
2006-01-25  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/Avatar.cpp: set the walking speed to 2.5 meters per second, to fit with cyphesis
    * src/components/ogre/AvatarEmberEntity.h: removed reference to PersonEmberEntity
    * src/components/ogre/ConsoleObjectImpl.*, src/components/ogre/EmberOgre.cpp: use the Singleton baseclass
    * src/components/ogre/EmberEntity.*, src/components/ogre/WorldEmberEntity.cpp: no need to hold a reference to the SceneManager since it's available through the SceneNode